fix: align right menu with left menu when layout wraps

--- a/src/app/configurations/seeds/seed-details/seed-details.component.css
+++ b/src/app/configurations/seeds/seed-details/seed-details.component.css
@@ -14,12 +14,13 @@
 }
 
 .right-menu {
-  margin-left: 1em;
+  margin-left: 0;
   #max-width: 450px;
   #width: 100%;
 }
 
 .left-menu {
+  margin-right: 1em;
   max-width: 350px;
 }
 
